.k8s/production/evolu-relay.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: evolu-relay
  namespace: suite-sync
  labels:
    app.kubernetes.io/name: evolu-relay
    app.kubernetes.io/part-of: suite-sync
spec:
  serviceName: evolu-relay
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: evolu-relay
  template:
    metadata:
      labels:
        app.kubernetes.io/name: evolu-relay
        app.kubernetes.io/part-of: suite-sync
    spec:
      containers:
        - name: evolu-relay
          image: 538326561891.dkr.ecr.eu-central-1.amazonaws.com/suite-sync-prod
          command: ["yarn", "start-evolu-relay"]
          ports:
            - name: relay
              containerPort: 4000
            - name: health
              containerPort: 4002
          volumeMounts:
            - name: evolu-relay-data
              mountPath: /app/data
          readinessProbe:
            httpGet:
              path: /
              port: health
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: health
            initialDelaySeconds: 20
            periodSeconds: 30
          resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              memory: 1024Mi
  volumeClaimTemplates:
    - metadata:
        name: evolu-relay-data
      spec:
        storageClassName: ebs-sc-retain
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Gi
---
apiVersion: v1
kind: Service
metadata:
  name: evolu-relay
  namespace: suite-sync
  labels:
    app.kubernetes.io/name: evolu-relay
    app.kubernetes.io/part-of: suite-sync
spec:
  selector:
    app.kubernetes.io/name: evolu-relay
  ports:
    - name: relay
      port: 4000
      targetPort: 4000
    - name: health
      port: 4002
      targetPort: 4002
