.k8s/production/quota-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quota-manager
  namespace: suite-sync
  labels:
    app.kubernetes.io/name: quota-manager
    app.kubernetes.io/part-of: suite-sync
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: quota-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: quota-manager
        app.kubernetes.io/part-of: suite-sync
    spec:
      containers:
        - name: quota-manager
          image: 538326561891.dkr.ecr.eu-central-1.amazonaws.com/suite-sync-prod
          command: ["yarn", "start-quota-manager"]
          ports:
            - name: http
              containerPort: 4001
            - name: health
              containerPort: 4002
          readinessProbe:
            httpGet:
              path: /
              port: health
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: health
            initialDelaySeconds: 20
            periodSeconds: 30
          resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              memory: 1024Mi
        - name: metrics
          image: 538326561891.dkr.ecr.eu-central-1.amazonaws.com/suite-sync-prod
          command: ["yarn", "start-metrics"]
          ports:
            - name: metrics
              containerPort: 4003
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: quota-manager
  namespace: suite-sync
  labels:
    app.kubernetes.io/name: quota-manager
    app.kubernetes.io/part-of: suite-sync
spec:
  selector:
    app.kubernetes.io/name: quota-manager
  ports:
    - name: http
      port: 4001
      targetPort: 4001
    - name: health
      port: 4002
      targetPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: quota-manager-metrics
  namespace: suite-sync
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "4003"
  labels:
    app.kubernetes.io/name: quota-manager
    app.kubernetes.io/component: metrics
    app.kubernetes.io/part-of: suite-sync
spec:
  selector:
    app.kubernetes.io/name: quota-manager
  ports:
    - name: metrics
      port: 4003
      targetPort: metrics
